fixed ome spacing for mobile

--- a/styles.css
+++ b/styles.css
@@ -242,12 +242,12 @@ button:hover{
     }
 
     #top-content {
-        margin-top: 35;
+        margin-top: 65;
     }
 
     #blob {
         width: 90vw;
-        padding-top: 80px;
+        padding-top: 60px;
         padding-left: 0;
     }
 
